# V-core-3

./: .gitignore  .gitmodules  404.html  CNAME  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  serve.sh  sitemap.xml  xy_joiner_left.step  xy_joiner_left.stl  xy_joiner_right.step  xy_joiner_right.stl
.github/workflows/: build_docs.yml  documentation.yml
VC3-Idex/: BOM.xlsx
VC3-Idex/klipper/: printer.cfg
VC3-Idex/superslicer/: warning.txt
bom/: enclosure2_bom.csv  eva3_0_2_hardware.csv  index.html  printed_parts_core.csv  printed_parts_electronics.csv  printed_parts_enclosure.csv  vcore31_upgrade.csv
bom/3.0/: V-Core 3 Enclosure Kit Public BOM.csv
cad/panels/: README.md  readme.md
community/: index.html
docs/: Dockerfile  clean_filenames.py  mkdocs.yml  pyproject.toml
docs/overrides/: base.html  main.html
docs/src/: .pages  CNAME  bom.md  build_guide.md  community.md  contribution.md  electronics.md  faq.md  files.md  firmware.md  index.md  legacy.md  printed_parts.md  slicer.md  upgrade.md  videos.md
electronics/: index.html
firmware/: index.html
firmware/Duet_RRF/: bed.g  config.g  heater-fault.g  homeall.g  homex.g  homey.g  homez.g  tfree1.g  tpost1.g  tpre1.g
js/: extra.js
legacy/: index.html
printed_parts/: index.html
search/: search_index.json
slicer/: index.html
slicer_profiles/Cura/: RatRig V Core 3 500 TPU profile.curaprofile
slicer_profiles/SuperSlicer/: README.md  SuperSlicer_config_bundle-0.6.1.ini  readme.md  (+11 more)
src/: plugin.py
upgrade/: index.html
videos/: index.html
(+1072 files in other folders)
