[tool.poetry]
name = "v3"
version = "1.0.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-minify-plugin = "^0.3.0"
mkdocs-redirects = "^1.0.1"
mkdocs-macros-plugin = "^0.4.20"
mkdocs-awesome-pages-plugin = "^2.4.0"
selenium = "^3.141.0"
# mkdocs-material = "^7.0.3"

mkdocs-monorepo-plugin = "^0.4.12"
Pygments = "^2.8.1"
[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
readline = "^6.2.4"
ipdb = "^0.13.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
