[tool.poetry]
name = "v3"
version = "1.0.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-redirects = "^1.0.1"
mkdocs-macros-plugin = "^0.5.0"
mkdocs-awesome-pages-plugin = "^2.5.0"
mkdocs-material = "^8.1.2"
mkdocs-monorepo-plugin = "^0.4.16"
Pygments = "^2.10.0"
python-slugify = "^5.0.2"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
readline = "^6.2.4"
ipdb = "^0.13.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
